--- a/src/index.njk
+++ b/src/index.njk
@@ -7,13 +7,23 @@ title: Home
 <head>
   <meta charset="UTF-8">
   <title>{{ title }}</title>
+  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles.css">
   
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 </head>
 <body>
-  <h1>Welcome to Hodder's Amusements</h1>
-
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="card shadow-sm">
+          <div class="card-body text-center">
+            <h1 class="display-4 mb-4">Welcome to Hodder's Amusements</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
-</html> 
+</html>
