--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,27 @@
+body {
+    font-family: 'Inter', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+  }
+
 #agentic-ratings {
     width: 80%;
     height: 400px;
     display: block;
     margin: 0 auto;
+}
+
+.title {
+    margin-bottom: 0px;
+}
+
+.summary {
+    margin-top: 0px;
+    color: gray;
+    margin-bottom: 1em;
+}
+
+.article-wrapper {
+    max-width: 80vw;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
